--- a/slides/style.css
+++ b/slides/style.css
@@ -23,3 +23,33 @@ img {
   clear: both;
 } 
 
+body:after {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    background-image: url('sagc.png');
+    background-repeat: no-repeat;
+    background-position: 20px center;
+    background-size: auto 40px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    z-index: 1000;
+}
+
+body:before {
+    content: 'Nextflow vs Snakemake 2024 - Nextflow intro';
+    position: fixed;
+    top: 0;
+    left: 80px;
+    right: 0;
+    height: 60px;
+    line-height: 60px;
+    font-size: 24px;
+    z-index: 1001;
+}
+
+div.slide {
+    padding-top: 70px !important;
+}
